--- a/RealEstateScenario/Presentation/Views/Home/Properties.cshtml
+++ b/RealEstateScenario/Presentation/Views/Home/Properties.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Domain.Models;
 
-@model Property
+@model List<Property>
 
 @{
     ViewData["Title"] = "Properties";
@@ -9,19 +9,22 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="container" id="properties">
-    <div class="row">
-        <small id="property-type">@Model.PropertyType</small>
-        <div class="col-4">
-            <img src="@Model.Image" alt="Property Image" class="img-fluid" />
+    @foreach(Property property in Model)
+    {
+        <div class="row">
+            <small id="property-type">@property.PropertyType</small>
+            <div class="col-4">
+                <img src="@property.Image" alt="Property Image" class="img-fluid" />
+            </div>
+            <div class="col-8">
+                <p><strong>Reference No:</strong> @property.ReferenceNumber</p>
+                <p><strong>Contract Type:</strong> @property.ContractType</p>
+                <p><strong>Floor Area (sq. m):</strong> @property.FloorArea</p>
+                <p><strong>Beds:</strong> @property.Beds</p>
+                <p><strong>Price:</strong> @property.Price.ToString("C")</p>
+                <p><strong>Locality:</strong> @property.Locality</p>
+            </div>
+            <p id="property-description">@property.Description</p>
         </div>
-        <div class="col-8">
-            <p><strong>Reference No:</strong> @Model.ReferenceNumber</p>
-            <p><strong>Contract Type:</strong> @Model.ContractType</p>
-            <p><strong>Floor Area (sq. m):</strong> @Model.FloorArea</p>
-            <p><strong>Beds:</strong> @Model.Beds</p>
-            <p><strong>Price:</strong> @Model.Price.ToString("C")</p>
-            <p><strong>Locality:</strong> @Model.Locality</p>
-        </div>
-        <p id="property-description">@Model.Description</p>
-    </div>
+    }
 </div>
