Added two buttons Back and Add. Will create an action to render an Add Property view within the Properties controller.

--- a/RealEstateScenario/Presentation/Views/Properties/Index.cshtml
+++ b/RealEstateScenario/Presentation/Views/Properties/Index.cshtml
@@ -8,6 +8,24 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a class="btn btn-primary mt-3" asp-area="" asp-controller="Home" asp-action="Index" role="button">
+    <span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
+        </svg>
+    </span>
+    <span>Back</span>
+</a>
+
+<a class="btn btn-success mt-3" href="#" role="button">
+    <span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus" viewBox="0 0 20 20">
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+        </svg>
+    </span>
+    <span>Add</span>
+</a>
+
 <div class="container" id="properties">
     @foreach (Property property in Model)
     {
@@ -21,7 +39,7 @@
                 <p><strong>Contract Type:</strong> @property.ContractType</p>
                 <p><strong>Floor Area (sq. m):</strong> @property.FloorArea</p>
                 <p><strong>Beds:</strong> @property.Beds</p>
-                <p><strong>Price:</strong> @property.Price.ToString("C")</p>
+                <p><strong>Price:</strong> @property.Price.ToString("C0")</p>
                 <p><strong>Locality:</strong> @property.Locality</p>
             </div>
             <p id="property-description">@property.Description</p>
