--- a/BusTicketBookingSystem/Presentation/wwwroot/css/site.css
+++ b/BusTicketBookingSystem/Presentation/wwwroot/css/site.css
@@ -20,3 +20,30 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.navbar {
+    background-color: #95c93d !important;
+}
+
+.navbar .navbar-brand,
+.navbar .nav-link {
+    color: #fff !important;
+}
+
+.navbar .nav-link:hover,
+.navbar .nav-link.active {
+    color: #e8f6d3 !important;
+}
+
+.navbar .dropdown-menu {
+    background-color: #95c93d !important;
+    border: none;
+}
+
+.navbar .dropdown-item {
+    color: #fff !important;
+}
+
+.navbar .dropdown-item:hover {
+    background-color: #7fb22e !important;
+}
