--- a/BusTicketBookingSystem/Presentation/Views/Shared/_Layout.cshtml
+++ b/BusTicketBookingSystem/Presentation/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Lines" asp-action="Index">Routes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Tickets</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
