--- a/BusTicketBookingSystem/Presentation/wwwroot/css/site.css
+++ b/BusTicketBookingSystem/Presentation/wwwroot/css/site.css
@@ -47,3 +47,11 @@ body {
 .navbar .dropdown-item:hover {
     background-color: #7fb22e !important;
 }
+
+a {
+    text-decoration: none;
+}
+
+.list-group > .list-group-item {
+    cursor: pointer;
+}
