--- a/BusTicketBookingSystem/Presentation/Views/Tickets/Create.cshtml
+++ b/BusTicketBookingSystem/Presentation/Views/Tickets/Create.cshtml
@@ -63,7 +63,7 @@
             </div>
             <div class="form-group mb-3">
                 <label class="control-label">Destination</label>
-                <select name="Ticket.DestinationFK" id="" class="form-control">
+                <select name="Ticket.DestinationFK" class="form-control">
                     @if (Model.Destinations != null)
                     {
                         @foreach (Location destination in Model.Destinations)
