--- a/BusTicketBookingSystem/Presentation/Views/Fleets/Index.cshtml
+++ b/BusTicketBookingSystem/Presentation/Views/Fleets/Index.cshtml
@@ -17,7 +17,21 @@
 }
 else
 {
-    <div class="container">
+    <div class="container mt-4">
+        <div class="row mb-4">
+            <div class="col-12 col-md-6 col-lg-4">
+                <form action="/Fleets/Search" method="get" class="d-flex" role="search">
+                    <input class="form-control me-2" type="text" placeholder="Search..." name="searchTerm"/>
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+        @if(ViewData["search_hits"] != null)
+        {
+            <div class="row mb-4">
+                <small class="text-muted">This search has returned @ViewData["search_hits"] results.</small>
+            </div>
+        }
         @foreach (Fleet fleet in Model)
         {
             <div class="row mb-4 align-items-center">
